<resources>
    <string name="app_name">MyFantasticBeasts</string>
    <string name="text_reg">Register</string>
    <string name="edittext_username">Username</string>
    <string name="edittext_email">Email Id</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_cfmpassword">Confirm Password</string>
    <string name="text_REG">REGISTER</string>
    <string name="text_already">Already Registered? Login</string>
    <string name="btn_login">Login</string>
    <string name="text_login">Login</string>
    <string name="text_LOG">LOGIN</string>
    <string name="text_not"> Not yet Registered? Register</string>
    <string name="my_image_description">Back button</string>
    <string name="btn_FgtPwd">Forget Password?</string>
    <string name="signup">SignUp</string>
    <string name="namemfb">My Fantastic Beasts</string>
    <string name="startinfo">"An app that will take you to introduce the vast  wildlife across the world."</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_email_address">Enter the Email Address</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>

</resources>