<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_register">

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:accessibilityLiveRegion="none"
        android:fontFamily="@font/promptmedium"
        android:gravity="center"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/yellow_50"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="282sp"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_username"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/yellow_50"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textlogin"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="@+id/textlogin"
        app:layout_constraintTop_toBottomOf="@+id/textlogin" />

    <EditText
        android:id="@+id/editemailid"
        android:layout_width="282sp"
        android:layout_height="48sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/yellow_50"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editUsername"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editUsername"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="282sp"
        android:layout_height="48sp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/yellow_50"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editemailid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editemailid"
        app:layout_constraintTop_toBottomOf="@+id/editemailid" />


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stbtn_bg_login"
        android:fontFamily="@font/promptmedium"
        android:text="@string/text_LOG"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="#B0FFFEE9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/donthaveanaccount"
        android:layout_width="207dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/promptregular"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/text_not"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="11sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnlogin"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/btnlogin"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_bg_textlogin"
        android:contentDescription="@string/my_image_description"
        android:gravity="start|top"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_arrowleft" />

    <Button
        android:id="@+id/ForgetPassword"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bg_textlogin"
        android:fontFamily="@font/promptregular"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:text="@string/btn_FgtPwd"
        android:textAlignment="center"
        android:textColor="@color/yellow_50"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:backgroundTint="#00FFFFFF"
        app:iconGravity="end"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.214" />


</androidx.constraintlayout.widget.ConstraintLayout>

