<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg_register">

    <TextView
        android:id="@+id/textregister"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:accessibilityLiveRegion="polite"
        android:fontFamily="@font/promptmedium"
        android:gravity="center"
        android:text="@string/text_reg"
        android:textAlignment="center"
        android:textColor="@color/yellow_50"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <EditText
        android:id="@+id/editusername"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_username"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/yellow_50"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textregister" />

    <EditText
        android:id="@+id/editemailid"
        android:layout_width="282sp"
        android:layout_height="48sp"
        android:layout_marginTop="18dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/yellow_50"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editusername"
        app:layout_constraintStart_toStartOf="@+id/editusername"
        app:layout_constraintTop_toBottomOf="@+id/editusername" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="282sp"
        android:layout_height="48sp"
        android:layout_marginTop="18dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/yellow_50"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editemailid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editemailid"
        app:layout_constraintTop_toBottomOf="@+id/editemailid" />

    <EditText
        android:id="@+id/editcfmPassword"
        android:layout_width="282sp"
        android:layout_height="48sp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/baseline_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/promptregular"
        android:hint="@string/edittext_cfmpassword"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/yellow_50"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:passwordToggleEnabled="true" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/stbtn_bg_login"
        android:fontFamily="@font/promptmedium"
        android:text="@string/text_REG"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="@color/yellow_tint"
        app:layout_constraintEnd_toEndOf="@+id/editcfmPassword"
        app:layout_constraintStart_toStartOf="@+id/editcfmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editcfmPassword" />


    <TextView
        android:id="@+id/alreadyhaveanaccount"
        android:layout_width="152dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/promptregular"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/text_already"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="11sp"
        android:textStyle="bold|italic"
        android:accessibilityLiveRegion="@integer/material_motion_duration_short_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnregister"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/btnregister"
        app:layout_constraintTop_toBottomOf="@+id/btnregister"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_bg_textlogin"
        android:contentDescription="@string/my_image_description"
        android:gravity="start|top"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_arrowleft" />

</androidx.constraintlayout.widget.ConstraintLayout>